# crabcamera

./: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  CRABCAMERA_V0_3_ROADMAP.md  Cargo.toml  MEDIAFOUNDATION_API_RESEARCH.md  README.md  README_backup.md  ROADMAP.md  SPONSORS.md  WINDOWS_CONTROLS_ARCHITECTURE.md  blox fruit hack  demo_crabcamera.py  tarpaulin-report.html  tarpaulin.json  v0_2_0_RELEASE_SUMMARY.md
.github/: FUNDING.yml
.github/workflows/: test-and-coverage.yml
demo/: README.md  plant-photography-studio.html
demos/framework-shootout/: FRAMEWORK_COMPARISON.md  README.md
demos/framework-shootout/egui-demo/: Cargo.toml
demos/framework-shootout/egui-demo/src/: main.rs
demos/framework-shootout/iced-demo/: Cargo.toml
demos/framework-shootout/iced-demo/src/: main.rs
demos/framework-shootout/slint-demo/: Cargo.toml  build.rs
demos/framework-shootout/slint-demo/src/: main.rs
demos/framework-shootout/slint-demo/ui/: camera_controls.slint
demos/framework-shootout/tauri-demo/public/: index.html
demos/framework-shootout/tauri-demo/src-tauri/: Cargo.toml  tauri.conf.json
demos/framework-shootout/tauri-demo/src-tauri/src/: main.rs
examples/: camera_preview.rs
scripts/: install-hooks.ps1  pre-commit.ps1  test-install.ps1
src/: camera.rs  contextlite.rs  errors.rs  lib.rs  permissions.rs  types.rs
src/commands/: advanced.rs  capture.rs  init.rs  mod.rs  permissions.rs  quality.rs  webrtc.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/platform/windows/: capture.rs  controls.rs  mod.rs
src/quality/: blur.rs  exposure.rs  mod.rs  validator.rs
src/tests/: advanced_tests.rs  camera_tests.rs  commands_tests.rs  integration_tests.rs  mod.rs  platform_tests.rs
src/types/: camera_format.rs  camera_frame.rs  platform.rs
src/webrtc/: mod.rs  peer.rs  streaming.rs
tests/: commands_capture_test.rs  commands_init_test.rs  commands_permissions_test.rs  errors_test.rs  integration_tests.rs  permissions_test.rs  platform_test.rs  platform_windows_test.rs
