[package]
name = "crabcamera"
version = "0.1.0"
edition = "2021"
description = "Advanced cross-platform camera integration for Tauri applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Michael-A-Kuykendall/crabcamera"
keywords = ["tauri", "camera", "cross-platform", "desktop", "rust"]
categories = ["multimedia", "gui"]

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin = "2.0"
nokhwa = { version = "0.10", features = ["input-native", "output-threaded"] }
tokio = { version = "1.40", features = ["full"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"

# ContextLite integration
contextlite-client = { version = "2.0.7", optional = true }

[features]
default = []
contextlite = ["dep:contextlite-client"]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Media_MediaFoundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
v4l = "0.14"

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"
serde_json = "1.0"
