[package]
name = "crabcamera-egui-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28"
egui = "0.28"
tokio = { version = "1.40", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

# CrabCamera integration (when we add it)
# crabcamera = { path = "../../../" }