[package]
name = "crabcamera-iced-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["image", "tokio"] }
tokio = { version = "1.40", features = ["full"] }
image = "0.25"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

# CrabCamera integration (when we add it)
# crabcamera = { path = "../../../" }

[build-dependencies]